Match-id-814bfd49822610e253296c3c74260fa9f6c069ac

--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/common.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/common.json
@@ -22,6 +22,7 @@
   "common_worm_protection_alarm_label": "The SLA already contains a WORM policy, which conflicts with the existing WORM policies of the resources to be protected. Select an SLA that does not contain a WORM policy or select other resources to be protected.",
   "common_open_worm_tips_label": "After this function is enabled, the copy cannot be changed to a non-WORM copy within the WORM validity period.",
   "common_worm_expiration_time_label": "WORM Expiration Time",
+  "common_remain_time_label": "Remaining Protection Duration",
   "common_set_worm_copy_label": "Set a copy as a WORM copy",
   "common_copy_retention_time_label": "Copy Retention Period",
   "common_security_worm_alarm_label": "WORM cannot be enabled because the resources associated with the SLA have been enabled with the data security WORM policy.",
@@ -200,6 +201,8 @@
   "common_size_label": "Size",
   "common_vm_label": "Virtualized Environment",
   "common_host_label": "Hosts",
+  "common_host_join_domain_label": "Host in Domain",
+  "common_rdadmin_password_label": "Password of User rdadmin",
   "common_database_label": "Databases",
   "common_bigdata_label": "Big Data",
   "common_cloud_label": "Huawei Cloud Stack",
@@ -558,13 +561,12 @@
   "common_destination_path_label": "Target Path",
   "common_sens_data_id_label": "Sensitive Data Identification",
   "common_copy_cloud_label": "Cloud",
-  "common_mounted_label": "Mounted",
+  "common_status_mounted_label": "Mounted",
   "common_un_mount_label": "Unmounted",
   "common_restored_label": "Restored",
   "common_indexing_label": "Indexing",
-  "common_exploration_mount_status_label": "File Exploration the Mounting Status",
-  "common_file_exploration_mount_label": "Mount File Exploration",
-  "common_file_exploration_unmount_label": "UnMount File Exploration",
+  "common_exploration_mount_status_label": "File-level Mount Status",
+  "common_file_exploration_unmount_label": "File-level Unmounting",
   "common_encryption_label": "Transmission and Data Encryption",
   "common_encryption_algorithm_label": "Encryption Algorithm",
   "common_project_label": "Project",
@@ -580,7 +582,7 @@
   "common_copy_batch_delete_uninfected_label": "You are about to delete copy ({0}).Deleted copies will be removed from the system and cannot be restored. After this operation, the ransomware detection accuracy of subsequent copies will be affected as copy ({1}) is the latest uninfected copy in the resource.<br>Suggestion: Before performing this operation, ensure that you have selected the correct copy.",
   "common_search_label": "Search",
   "common_directory_label": "Directory",
-  "common_file_directory_label": "File Directory",
+  "common_file_directory_label": "File Directories",
   "common_link_label": "Link",
   "common_vmware_label": "VMware",
   "common_fusion_compute_label": "FusionCompute",
@@ -618,8 +620,7 @@
   "common_status_restoring_label": "Restoring",
   "common_status_mounting_label": "Mounting",
   "common_status_mount_failed_label": "Mounting failed",
-  "common_status_deleting_mount_label": "Unmounting",
-  "common_status_delete_mount_failed_label": "UnMount failed",
+  "common_status_delete_mount_failed_label": "Unmounting failed",
   "common_delete_copy_label": "Copy Deletion",
   "common_delete_copy_lower_label": "Copy deletion",
   "common_pending_label": "Queuing",
@@ -772,6 +773,7 @@
   "common_job_id_label": "Job ID",
   "common_target_cluster_label": "External Cluster",
   "common_cluster_type_label": "Backup/Multi-domain/Replication Cluster",
+  "common_e_series_cluster_type_label": "Replication Cluster",
   "common_file_object_info_label": "Object {0}",
   "common_file_resource_info_label": "Resource {0}",
   "common_file_object_label": "File Object",
@@ -1757,7 +1759,7 @@
   "common_create_instance_label": "Creating an instance",
   "common_existed_instance_label": "Selecting an existing instance",
   "common_limit_rate_policy_single_label": "Rate Limiting Policy",
-  "common_limit_rate_policy_tip_label": "Select a rate limiting policy that has been created on the \"<span class='aui-link'><a href='/console/#/protection/policy/limit-rate-policy'>Rate Limiting Policies</a></span>\"page.",
+  "common_limit_rate_policy_tip_label": "Select a rate limiting policy that has been created on the \"<span class='aui-link'><a class='special-router-link'>Rate Limiting Policies</a></span>\"page.",
   "common_limit_rate_policy_tip_distributed_label": "If you leave this parameter unspecified, the maximum bandwidth is 32 MB/s by default.",
   "common_ndmp_restore_to_location_tip_label": "You are about to restore data using the copy ({0}). Ensure that the restoration target location is correct and has sufficient remaining space. (Space of the restoration target location for restoration using a full copy ≥ Data volume before full copy reduction; space of the restoration target location for restoration using an incremental copy ≥ Data volume before last full copy reduction + Data volume before incremental copy reduction).",
   "common_select_hcs_disk_help_label": "If Automatic EVS Disk Protection is enabled, all EVS disks (including newly detected ones) whose Storage Type is FusionStorage, OceanStor Dorado, or OceanStor of the ECS will be protected.\nIf this function is disabled, you need to manually select the EVS disks to be protected.",
@@ -1923,6 +1925,9 @@
   "common_nutanix_host_label": "Nutanix host",
   "common_nutanix_vm_label": "Nutanix VM",
   "common_worm_expiration_time_tips_label": "If the WORM expiration time is earlier than the WORM file system compliance clock time, the WORM validity period has expired. You can click the copy generation time to view the WORM file system compliance clock time.",
+  "common_worm_expiration_time_detail_tips_label": "If a copy is a WORM copy, the WORM expiration time is displayed.",
+  "common_worm_clock_tips_label": "An independent clock used for copy anti-tampering. When the WORM clock for a copy reaches the WORM expiration time, the copy becomes a common copy.",
+  "common_remain_time_tips_label": "Time difference between the WORM clock and the WORM expiration time.",
   "common_expiration_time_tips_label": "The actual copy expiration time is subject to the later time between Copy Expiration Time and WORM Expiration Time.",
   "common_worm_clock_label": "WORM Clock",
   "common_optional_label": "Optional",
@@ -1963,6 +1968,6 @@
   "common_vm_ndb_client_label": "In Hot-ADD transmission mode, the client can be deployed on:",
   "common_vm_storage_label": "Storage-layer transmission mode",
   "common_vm_storage_client_label": "In storage-layer transmission mode, the client can be deployed on:",
-  "common_retain_sanpshot_help_label": "Enabling this function will retain the snapshot created during this backup.",
-  "common_retain_sanpshot_disable_label": "If snapshot are not retained, incremental backup automatically become full backup."
+  "common_delete_sanpshot_label": "Delete Snapshot",
+  "common_delete_sanpshot_help_label": "This function is disabled by default. After a Huawei Cloud Stack cloud server is backed up, the system will retain the snapshot on the production storage. You can enable this function to prevent the snapshot from occupying capacity on the production storage. After this function is enabled, the system will delete the snapshot from the production storage upon backup completion, and all subsequent forever incremental (synthetic full) backups will be converted into full backups."
 }
