--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/protection.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/protection.json
@@ -1220,12 +1220,16 @@
   "protection_apply_sla_in_namespace_label": "Apply the namespace SLA to all StatefulSet resources that are not associated with any SLA",
   "protection_apply_sla_in_new_statefulset_label": "Apply the namespace SLA to new StatefulSet resources",
   "protection_apply_sla_in_hcs_project_label": "Apply the project/resource set SLA to all unassociated cloud servers",
+  "protection_apply_sla_in_aps_project_label": "Apply the AZ set SLA to all unassociated cloud servers",
+  "protection_apply_sla_in_resource_set_project_label": "Apply the resource set set SLA to all unassociated cloud servers",
   "protection_hcs_storage_type_label": "Storage Type",
   "protection_hcs_centralized_label": "Centralized",
   "protection_hcs_scale_out_label": "Scale-out",
   "protection_hcs_host_builtin_label": "Built-in",
   "protection_hcs_host_external_label": "External",
   "protection_apply_sla_in_new_hcs_project_label": "Apply the project/resource set SLA to newly created cloud servers",
+  "protection_apply_sla_in_new_aps_project_label": "Apply the AZ set SLA to newly created cloud servers",
+  "protection_apply_sla_in_new_resource_project_label": "Apply the resource set set SLA to newly created cloud servers",
   "protection_apply_sla_in_cna_vmware_label": "Apply the host SLA to all VM resources that are not associated with any SLA",
   "protection_apply_sla_in_no_cna_vmware_label": "Apply the host SLA to new VM resources",
   "protection_apply_sla_in_cluster_vmware_label": "Apply the cluster SLA to all host and VM resources that are not associated with any SLA",
@@ -1526,6 +1530,9 @@
   "protection_general_database_label": "General Databases",
   "protection_backup_setting_label": "Backup Settings",
   "protection_copy_location_label": "Backup Copy Storage Location",
+  "protection_copy_location_alert_label": "Changing the location for storing backup copies of OceanBase or TDSQL distributed instances makes subsequent backup copies unavailable for restoration.",
+  "protection_modify_protection_warn_copy_location_label": "If the backup storage location in the protection is changed, subsequent copies will be unavailable for restoration.",
+  "protection_remove_protection_warn_copy_location_label": "After protection is removed, using a new backup storage location for subsequent protection settings that differs from the original will make subsequent copies unavailable for restoration.",
   "protection_backup_tip_label": "Set backup policies, such as full backup and incremental backup policies. A maximum of four backup policies of each type are supported.<br>You can specify the backup interval, copy retention period, and backup time window.<br>Note:<br>1. When data is backed up by day, hour, or minute, the retention period must be longer than the interval between two consecutive backups.<br>2. If the end time of the allowed period for backup is earlier than or equal to the start time, the end time is on the next day.<br>3. If a backup job is not complete within the allowed time window, the system does not stop the job but reports an alarm.",
   "protection_custom_params_label": "Customized Parameters",
   "protection_database_auth_extend_info_label": "Other Authentication Information",
@@ -1565,8 +1572,8 @@
   "protection_copy_retention_label": "full copies for replication and retain them for",
   "protection_overwrite_openstack_project_sla_label": "Overwrite existing SLAs of the cloud host",
   "protection_not_overwrite_openstack_project_sla_label": "Retain existing SLAs of the cloud host",
-  "protection_apply_sla_in_openstack_project_label": "Apply the project set SLA to all unassociated cloud hosts",
-  "protection_apply_sla_in_new_openstack_project_label": "Apply the project set SLA to newly created cloud hosts",
+  "protection_apply_sla_in_openstack_project_label": "Apply the project set SLA to all unassociated cloud servers",
+  "protection_apply_sla_in_new_openstack_project_label": "Apply the project set SLA to newly created cloud servers",
   "protection_custon_params_placeholder_label": "You can enter multiple parameters and separate them with commas (,), for example, IP address=100.120.140,Username=user_01.",
   "protection_canncel_huawei_stack_project_label": "Project/Cloud host",
   "protection_cluster_host_vm_label": "Cluster/Host/VM",
@@ -1598,6 +1605,8 @@
   "protection_goldendb_storage_file_label": "Storage Configuration",
   "protection_goldendb_storage_file_tips_label": "Cluster instance-level storage configuration file (ini) configured on the GoldenDB management page.",
   "protection_db_two_tablespace_retsore_tips_label": "If tables that have been deleted exist in the copy, you cannot use the copy of the table space set for restoration. Use database copies instead.",
+  "protection_db_two_retsore_connect_database_tips_label": "During the restoration of the DB2 database, do not connect to the target database again. Otherwise, the restoration task may fail.",
+  "protection_db_two_retsore_connect_tablespace_tips_label": "During the restoration of the DB2 tablespace set, do not connect to the target database again. Otherwise, the restoration task may fail.",
   "protection_report_timerange_error_label": "The end date cannot be later than the current date.",
   "protection_kingbase_update_mode_label": "Update Running Mode",
   "protection_kingbase_update_mode_tips_label": "Obtain latest information about active and standby nodes in the production environment.",
@@ -1750,7 +1759,7 @@
   "protection_host_cpu_label": "CPU Usage",
   "protection_host_mem_label": "Memory Usage",
   "protection_vmware_storage_label": "Storage-Layer Backup",
-  "protection_vmware_storage_tips_label": "If storage resources of OceanStor Dorado 6.1.3 and later versions or NetApp ONTAP 9.4 and later versions are added, the VM disks that meet requirements are preferentially backed up in storage-layer backup mode.<br>This function is mutually exclusive with Exclude Deleted File Data and Specify Data Transmission Mode.",
+  "protection_vmware_storage_tips_label": "If storage resources of OceanStor Dorado (6.1.3 or later versions) or NetApp ONTAP (9.6 or 9.8) are added, the VM disks that meet requirements are preferentially backed up in storage-layer backup mode.<br>This function is mutually exclusive with Exclude Deleted File Data and Specify Data Transmission Mode.",
   "protection_restore_target_to_cluster_label": "Restore to the Target Cluster",
   "protection_single_node_deployment_label": "Standalone",
   "protection_active_standby_deployment_label": "Active/Standby",
@@ -2086,7 +2095,7 @@
   "protection_oracle_pdb_status_abnormal_tips_label": "Table-level restoration cannot be performed because the PDB in the target database is abnormal.",
   "protection_select_restore_table_label": "Select Tables to Be Restored",
   "protection_delete_same_name_table_label": "Delete Same-Name Table",
-  "protection_pdb_restore_path_tips_label": "Ensure that the path exists on the target host. Otherwise, the restoration task will fail.",
+  "protection_pdb_restore_path_tips_label": "Ensure that the path exists on the target host. Otherwise, the restoration task will fail.For a cluster deployment scenario, enter the ASM shared path.",
   "protection_delete_same_pdb_label": "Delete Same-Name PDB",
   "protection_after_restoration_open_pdb_label": "Start PDBs After Restoration",
   "protection_delete_same_name_table_tips_label": "If a table with the same name exists in the target restoration location, disabling this function will cause restoration to fail. Exercise caution when performing this operation.",
@@ -2108,10 +2117,10 @@
   "protection_cloud_specified_path_help_label": "If this parameter is not specified, data will be restored to the target cloud server based on the original path where the selected files are stored.<br>If the drive letter in the specified target path does not exist on the target cloud server running the Windows OS, the restoration will fail.",
   "protection_cnware_new_disk_name_help_label": "If the name of the disk to be created already exists, the new disk name is set to Specified disk name_Timestamp.",
   "protection_vbs_node_info_label": "VBS Node Login Information",
-  "protection_vbs_node_user_name_label": "Node Username",
-  "protection_vbs_node_ip_label": "Node IP Address",
-  "protection_vbs_node_port_label": "Node Port",
-  "protection_vbs_node_password_label": "Node Password",
+  "protection_vbs_node_user_name_label": "Username",
+  "protection_vbs_node_ip_label": "IP Address",
+  "protection_vbs_node_port_label": "Port",
+  "protection_vbs_node_password_label": "Password",
   "protection_vbs_node_info_tip_label": "Enable this function if you need to use the built-in client to perform incremental backup for volumes of Huawei scale-out block storage (version 8.1.3 or later).",
   "protection_fileset_user_tips_label": "1. Contains 3 to 20 characters.<br>2. Spaces, control characters, and special characters \"/\\[]:|<>+=;?*@, are not allowed. A name cannot end with a period (.).",
   "protection_fileset_user_valid_label": "Spaces, control characters, and special characters \"/\\[]:|<>+=;?*@, are not allowed. A name cannot end with a period (.).",
@@ -2293,8 +2302,8 @@
   "protection_register_sqlser_instance_label": "Register a SQL Server Instance",
   "protection_sqlser_instance_label": "SQL Server Instance",
   "protection_install_vmware_tools_label": "Check and Install VMware Tools",
-  "protection_mount_file_exploration_label": "Create Mount",
-  "protection_file_exploration_unmount_tips_label": "No file-level browsing mounting task has been performed for the copy. Click Create Mount, wait until the file-level mounting status of the copy changes to Mounted, and try again.",
+  "protection_mount_file_exploration_label": "Create Mount Point",
+  "protection_file_exploration_unmount_tips_label": "No file-level mounting task has been performed for the copy. Click Create Mount Point, wait until the File-level Mount Status of the copy changes to Mounted, and try again.",
   "protection_install_vmware_tools_desc_label": "Before performing application-consistent backup or file-level restoration, you must install VMware Tools on the protected VM or target VM.",
   "protection_check_vapi_endpoint_label": "Check and Enable the vmware-vapi-endpoint Service",
   "protection_check_vapi_endpoint_desc_label": "Before registering the VMware virtualization environment, ensure that the vmware-vapi-endpoint service has been enabled on the vCenter Server. Otherwise, the registration will fail.",
@@ -2481,7 +2490,7 @@
   "protection_business_ips_label": "Backup Network IP Address (Address Segment)",
   "protection_business_ip_tip_label": "This IP address is used for registration. If you do not enter one, the client will check the connectivity of service port IP addresses and automatically select a reachable service port IP address for registration.",
   "protection_add_backup_record_label": "Add Backup Records",
-  "protection_add_backup_record_tip_label": "After it is enabled, the result and time of this backup will be added to the custom attributes of the vcenter virtual machine when the backup is completed. It will not take effect when the production resource is ESXI.",
+  "protection_add_backup_record_tip_label": "When enabled, backup information will be added under Custom Attribute of a VM on the vCenter Server upon backup completion of this VM. The setting will not take effect for registered ESXi hosts.",
   "protection_source_deduplication_tip_label": "Enable this function if you want to configure LAN-free for the client.",
   "protection_fqdn_valid_tip_label": "The labels in a domain name are separated by periods (.). Each label can contain a maximum of 63 characters, including letters, digits, hyphens (-), and underscores (_), and cannot start or end with a hyphen (-) or underscore (_).",
   "protection_openstack_disk_tip_label": "Shared disks or clone volumes will not be displayed and cannot be backed up.",
@@ -2504,5 +2513,19 @@
   "protection_rule_name_include_label": "A VM name includes \"{0}\"",
   "protection_rule_name_exclude_label": "A VM name excludes \"{0}\"",
   "protection_rule_name_include_exclude_label": "A VM name includes \"{0}\" and excludes \"{1}\"",
-  "protection_fusion_recovery_tip_label": "The following VM configuration items will not be restored. After the restoration, you can go to {0} and manually set them:<ul><li>Memory - Hugepage memory</li><li>CPU - Binding information</li><li>VM startup mode - Specify device boot sequence</li><li>PCI device information</li><li>GPU resource group parameters</li><li>NUMA topology adjustment</li><li>CPU/Memory hot add</li></ul>"
+  "protection_fusion_recovery_tip_label": "The following VM configuration items will not be restored. After the restoration, you can go to {0} and manually set them:<ul><li>Memory - Hugepage memory</li><li>CPU - Binding information</li><li>VM startup mode - Specify device boot sequence</li><li>PCI device information</li><li>GPU resource group parameters</li><li>NUMA topology adjustment</li><li>CPU/Memory hot add</li></ul>",
+  "protection_script_timeout_label": "Database Consistency Script Execution Timeout Duration",
+  "protection_cluster_sla_help_label": "After resource scanning, the system automatically associates the SLA of a cluster with the VMs that are newly added to the cluster but not associated with any SLA.",
+  "protection_host_sla_help_label": "After resource scanning, the system automatically associates the SLA of a host with the VMs that are newly added to the host but not associated with any SLA.",
+  "protection_openstack_sla_help_label": "After resource scanning, the system automatically associates the SLA of a project with the cloud servers that are newly added to the project but not associated with any SLA.",
+  "protection_hcs_sla_help_label": "After resource scanning, the system automatically associates the SLA of a project/resource set with the cloud servers that are newly added to the project/resource set but not associated with any SLA.",
+  "protection_aps_sla_help_label": "After resource scanning, the system automatically associates the SLA of an AZ with the cloud servers that are newly added to the AZ but not associated with any SLA.",
+  "protection_overwrite_policy_cluster_help_label": "Whether the system automatically overwrites the SLAs associated with newly added VMs in the cluster after resource scanning.",
+  "protection_overwrite_policy_host_help_label": "Whether the system automatically overwrites the SLAs associated with newly added VMs in the host after resource scanning.",
+  "protection_overwrite_policy_openstack_help_label": "Whether the system automatically overwrites the SLAs associated with newly added cloud servers in the project after resource scanning.",
+  "protection_overwrite_policy_hcs_help_label": "Whether the system automatically overwrites the SLAs associated with newly added cloud servers in the project/resource set after resource scanning.",
+  "protection_overwrite_policy_aps_help_label": "Whether the system automatically overwrites the SLAs associated with newly added cloud servers in the AZ after resource scanning.",
+  "protection_overwrite_policy_group_help_label": "Whether to automatically overwrite the SLAs associated with VMs in a VM group when a protection policy is created or modified for the VM group.",
+  "protection_file_tree_e1000_tip_label": "If there are more than 10,000 files in the selected directory, the system may time out, preventing you from selecting files or folders to be restored from the directory. In this case, you are advised to manually enter paths.",
+  "protection_file_tree_tip_label": "If there are more than one million files in the selected directory, the system may time out, preventing you from selecting files or folders to be restored from the directory. In this case, you are advised to manually enter paths."
 }
