--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/system.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/system.json
@@ -12,6 +12,7 @@
   "system_backup_cluster_member_node_label": "Member Node",
   "system_backup_cluster_member_node_low_label": "Member node",
   "system_backup_cluster_member_node_lowcase_label": "member node",
+  "system_backup_member_node_tip_label": "The OceanProtect X3000 Appliance and OceanProtect X6000/X8000/X9000 Appliance cannot be member nodes for each other.<br>The OceanProtect X9000 Appliance and OceanProtect X6000/X8000 Appliance cannot be member nodes for each other.",
   "system_network_set_label": "Network settings",
   "system_netplane_name_label": "Network Plane Name",
   "system_internal_communication_network_plane_label": "Internal Communication Network",
@@ -485,6 +486,7 @@
   "system_device_time_label": "Device Time",
   "system_device_time_desc_label": "If you need to change the device time, <span class='aui-link' id='open-device'>log in to DeviceManager</span>, and choose Settings > Basic Information > Device Time. The Device Time page is displayed.",
   "system_cluster_device_time_desc_label": "If you need to change the device time, log in to DeviceManager, and choose Settings > Basic Information > Device Time. The Device Time page is displayed.",
+  "system_cluster_device_time_distributed_desc_label": "If you need to change the device time, log in to DeviceManager, and choose Settings > Time Settings. The Time Settings page is displayed.",
   "system_device_time_desc_cyber_label": "To set NTP time synchronization, log in to the iBMC WebUI and choose \"iBCM Management\" > \"Time Zone & NTP\". On the page that is displayed, set NTP time synchronization.",
   "system_sftp_label": "SFTP Service",
   "system_setting_trap_info_label": "Authentication information has been set successfully. Go to the <span class='aui-link' id='open-host'>Protection > Clients</span> page and select an Oracle host to manually synchronize trap information.",
