--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/task/common.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/task/common.json
@@ -1055,6 +1055,13 @@
   "plugin_not_enable_acl_backup_label": "The ACL backup function is disabled.",
   "plugin_copy_not_contain_acl_label": "The copy does not contain ACL information.",
   "K8s_plugin_task_backup_fail_label": "Failed to back up Kubernetes CSI.",
+  "k8s_pre_consistent_script_exec_timeout_label": "Executing the pre-processing script for application-consistent backup of {0} timed out. The timeout interval is {1} seconds. ",
+  "k8s_post_consistent_script_exec_timeout_label": "Executing the post-processing script for application-consistent backup of {0} timed out. The timeout interval is {1} seconds. Run this script manually to unlock the database. ",
+  "k8s_pre_consistent_script_exec_fail_label": "Failed to execute the pre-processing script for application-consistent backup of {0}. ",
+  "k8s_post_consistent_script_exec_fail_label": "Failed to execute the post-processing script for application-consistent backup of {0}. Run this script manually to unlock the database. ",
+  "k8s_pre_consistent_script_exec_success_label": "Succeeded in executing the pre-processing script for application-consistent backup of {0}. ",
+  "k8s_post_consistent_script_exec_success_label": "Succeeded in executing the post-processing script for application-consistent backup of {0}. ",
+  "k8s_pvc_create_snapshot_success_label": "A snapshot is created for PVC {1} at {0}.",
   "agent_tidb_failed_fetch_databases_on_target_cluster_label": "Failed to obtain target cluster databases.",
   "job_log_restore_check_cluster_exist_fail_label": "Target cluster {0} does not exist, recovery failed.",
   "job_log_restore_check_cluster_role_fail_label": "The role of target cluster {0} is standby, recovery failed.",
