--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/zh-cn/common.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/zh-cn/common.json
@@ -182,6 +182,8 @@
   "common_size_label": "大小",
   "common_vm_label": "虚拟化环境",
   "common_host_label": "主机",
+  "common_host_join_domain_label": "主机是否已加入域",
+  "common_rdadmin_password_label": "rdadmin用户的密码",
   "common_database_label": "数据库",
   "common_bigdata_label": "大数据",
   "common_cloud_label": "华为云Stack",
@@ -541,13 +543,12 @@
   "common_destination_path_label": "目标路径",
   "common_sens_data_id_label": "敏感数据识别",
   "common_copy_cloud_label": "云端",
-  "common_mounted_label": "已挂载",
+  "common_status_mounted_label": "已挂载",
   "common_un_mount_label": "未挂载",
   "common_restored_label": "已恢复",
   "common_indexing_label": "索引中",
-  "common_exploration_mount_status_label": "文件级浏览挂载状态",
-  "common_file_exploration_mount_label": "文件级浏览挂载",
-  "common_file_exploration_unmount_label": "文件级浏览卸载",
+  "common_exploration_mount_status_label": "文件级挂载状态",
+  "common_file_exploration_unmount_label": "文件级卸载",
   "common_encryption_label": "传输和存储加密",
   "common_encryption_algorithm_label": "加密算法",
   "common_project_label": "项目",
@@ -602,8 +603,7 @@
   "common_status_restoring_label": "恢复中",
   "common_status_mounting_label": "挂载中",
   "common_status_mount_failed_label": "挂载失败",
-  "common_status_deleting_mount_label": "删除挂载中",
-  "common_status_delete_mount_failed_label": "删除挂载失败",
+  "common_status_delete_mount_failed_label": "卸载失败",
   "common_delete_copy_label": "副本删除",
   "common_delete_copy_lower_label": "副本删除",
   "common_pending_label": "排队中",
@@ -758,6 +758,7 @@
   "common_job_id_label": "任务ID",
   "common_target_cluster_label": "外部集群",
   "common_cluster_type_label": "备份集群/多域集群/复制集群",
+  "common_e_series_cluster_type_label": "复制集群",
   "common_file_object_info_label": "对象{0}",
   "common_file_resource_info_label": "资源{0}",
   "common_file_object_label": "文件对象",
@@ -1019,6 +1020,7 @@
   "common_worm_protection_alarm_label": "该SLA已包含WORM策略，与待保护资源已有的WORM策略冲突，请选择不包含WORM策略的SLA或重新选择待保护资源。",
   "common_open_worm_tips_label": "开启后，该副本在WORM有效期内不支持修改为非WORM副本。",
   "common_worm_expiration_time_label": "WORM过期时间",
+  "common_remain_time_label": "剩余保护时长",
   "common_set_worm_copy_label": "设置为WORM副本",
   "common_copy_retention_time_label": "副本保留时间",
   "common_security_worm_alarm_label": "该SLA关联的资源已开启数据安全WORM策略，不支持开启WORM。",
@@ -1756,7 +1758,7 @@
   "common_create_instance_label": "新建实例",
   "common_existed_instance_label": "选择已有实例",
   "common_limit_rate_policy_single_label": "限速策略",
-  "common_limit_rate_policy_tip_label": "请选择“<span class='aui-link'><a href='/console/#/protection/policy/limit-rate-policy'>限速策略</a></span>”界面中已创建的限速策略。",
+  "common_limit_rate_policy_tip_label": "请选择“<span class='aui-link'><a class='special-router-link'>限速策略</a></span>”界面中已创建的限速策略。",
   "common_limit_rate_policy_tip_distributed_label": "如不选择，则默认最大带宽为32MB/s。",
   "common_ndmp_restore_to_location_tip_label": "您将要执行恢复副本数据（{0}）的操作，请确认恢复目标位置正确且有足够的剩余空间（全量副本恢复要求目标位置剩余空间≥全量副本缩减前数据量；增量副本恢复要求目标位置剩余空间≥上一次全量副本缩减前数据量+此次增量副本缩减前数据量）。",
   "common_select_hcs_disk_help_label": "开启自动保护云硬盘，将保护云服务器下的所有存储类型为FusionStorage、OceanStor Dorado、OceanStor的云硬盘（含新发现的云硬盘）；\n如果关闭自动保护，需手动选择待保护的云硬盘。",
@@ -1922,6 +1924,9 @@
   "common_nutanix_host_label": "Nutanix主机",
   "common_nutanix_vm_label": "Nutanix虚拟机",
   "common_worm_expiration_time_tips_label": "当WORM过期时间早于WORM文件系统法规时钟时，即为过了WORM有效期。WORM文件系统法规时钟可单击副本生成时间查看。",
+  "common_worm_expiration_time_detail_tips_label": "当副本为WORM副本时，显示WORM过期的具体时间。",
+  "common_worm_clock_tips_label": "用于副本防篡改而设置的独立时钟。当WORM时钟到达WORM过期时间时，副本变为普通副本。",
+  "common_remain_time_tips_label": "WORM时钟距离WORM过期时间的时间差。",
   "common_expiration_time_tips_label": "副本实际过期时间以“副本过期时间”与“WORM过期时间”中的最晚时间为准。",
   "common_worm_clock_label": "WORM时钟",
   "common_optional_label": "可选",
@@ -1962,6 +1967,6 @@
   "common_vm_ndb_client_label": "NBD/NBDSSL传输模式下支持将客户端部署到：",
   "common_vm_storage_label": "存储层传输模式",
   "common_vm_storage_client_label": "存储层传输模式下支持将客户端部署到：",
-  "common_retain_sanpshot_help_label": "启用将保留本次备份期间生成的快照。",
-  "common_retain_sanpshot_disable_label": "若不保留快照，则增量备份自动转为全量备份。"
+  "common_delete_sanpshot_label": "删除快照",
+  "common_delete_sanpshot_help_label": "默认关闭。备份华为云Stack的云服务器完成后，系统会保留生产存储上的快照。为避免快照占用生产存储容量，可以开启该开关。开启后，系统在备份完成后会将快照从生产存储上删除，后续永久增量（合成全量）备份任务将全部转为全量备份。"
 }
