--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/zh-cn/protection.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/zh-cn/protection.json
@@ -448,10 +448,10 @@
   "protection_vm_filter_label": "虚拟机过滤",
   "protection_apply_policy_label": "SLA应用策略",
   "protection_overwrite_policy_label": "SLA覆盖策略",
-  "protection_overwrite_sla_label": "覆盖虚拟机已有的SLA",
-  "protection_overwrite_host_sla_label": "覆盖主机和虚拟机已有的SLA",
-  "protection_not_overwrite_sla_label": "不覆盖虚拟机已有的SLA",
-  "protection_not_overwrite_host_sla_label": "不覆盖主机和虚拟机已有的SLA",
+  "protection_overwrite_sla_label": "覆盖虚拟机已关联的SLA",
+  "protection_overwrite_host_sla_label": "覆盖主机和虚拟机已关联的SLA",
+  "protection_not_overwrite_sla_label": "不覆盖虚拟机已关联的SLA",
+  "protection_not_overwrite_host_sla_label": "不覆盖主机和虚拟机已关联的SLA",
   "protection_not_overwrite_modify_sla_label": "例外场景，如果虚拟机SLA与{0}原SLA相同，则虚拟机SLA会被覆盖。",
   "protection_apply_sla_in_host_label": "将{0}SLA应用到所有未关联SLA的虚拟机上",
   "protection_apply_sla_in_new_vm_label": "将{0}SLA应用到新创建的虚拟机上",
@@ -1217,10 +1217,10 @@
   "protection_create_status_label": "创建状态",
   "protection_hive_server_two_tip_label": "请输入正确格式的HiveServer2链接",
   "protection_zk_mode_tip_label": "zookeeper命名空间为空时，只能填写一个HiveServer2链接",
-  "protection_overwrite_statefulset_sla_label": "覆盖StatefulSet已有的SLA",
-  "protection_not_overwrite_statefulset_sla_label": "不覆盖StatefulSet已有的SLA",
-  "protection_overwrite_hcs_project_sla_label": "覆盖云服务器已有的SLA",
-  "protection_not_overwrite_hcs_project_sla_label": "不覆盖云服务器已有的SLA",
+  "protection_overwrite_statefulset_sla_label": "覆盖StatefulSet已关联的SLA",
+  "protection_not_overwrite_statefulset_sla_label": "不覆盖StatefulSet已关联的SLA",
+  "protection_overwrite_hcs_project_sla_label": "覆盖云服务器已关联的SLA",
+  "protection_not_overwrite_hcs_project_sla_label": "不覆盖云服务器已关联的SLA",
   "protection_hcs_storage_type_label": "存储类型",
   "protection_hcs_centralized_label": "集中式",
   "protection_hcs_scale_out_label": "分布式",
@@ -1229,7 +1229,11 @@
   "protection_apply_sla_in_namespace_label": "将命名空间的SLA应用到所有未关联SLA的StatefulSet资源",
   "protection_apply_sla_in_new_statefulset_label": "将命名空间的SLA应用到新建的StatefulSet资源",
   "protection_apply_sla_in_hcs_project_label": "将项目/资源集SLA应用到所有未关联的云服务器上",
+  "protection_apply_sla_in_aps_project_label": "将可用区SLA应用到所有未关联的云服务器上",
+  "protection_apply_sla_in_resource_set_project_label": "将资源集SLA应用到所有未关联的云服务器上",
   "protection_apply_sla_in_new_hcs_project_label": "将项目/资源集SLA应用到新创建的云服务器上",
+  "protection_apply_sla_in_new_aps_project_label": "将可用区SLA应用到新创建的云服务器上",
+  "protection_apply_sla_in_new_resource_project_label": "将资源集SLA应用到新创建的云服务器上",
   "protection_apply_sla_in_cna_vmware_label": "同时将主机的SLA应用到所有未关联SLA的虚拟机资源",
   "protection_apply_sla_in_no_cna_vmware_label": "同时将主机的SLA应用到新建的虚拟机资源",
   "protection_apply_sla_in_cluster_vmware_label": "同时将集群的SLA应用到所有未关联SLA的主机和虚拟机资源",
@@ -1526,6 +1530,9 @@
   "protection_general_database_label": "通用数据库",
   "protection_backup_setting_label": "备份配置",
   "protection_copy_location_label": "备份副本存储位置",
+  "protection_copy_location_alert_label": "修改OceanBase、TDSQL分布式实例备份副本存储位置，将导致后续副本不可用于恢复。",
+  "protection_modify_protection_warn_copy_location_label": "若修改保护中的备份存储位置，将导致后续副本不可用于恢复。",
+  "protection_remove_protection_warn_copy_location_label": "移除保护后，若后续创建的新保护中的备份存储位置与原保护中的备份存储位置不同，将导致后续副本不可用于恢复。",
   "protection_backup_tip_label": "设置备份策略，如全量备份、增量备份等，每种类型最多支持添加4个备份策略；<br>策略可定义备份频率、副本保留时间、备份时间窗口。<br>说明：<br>1、按天/小时/分钟备份时，保留时间必须大于策略配置的两次连续备份时间间隔；<br>2、如果允许备份的结束时间小于或等于开始时间，则结束时间实际为跨日的结束时间；<br>3、如果备份任务在允许备份的时间窗口未执行完成，系统不会中止本次备份任务，但会上报告警。",
   "protection_custom_params_label": "自定义参数",
   "protection_database_auth_extend_info_label": "数据库其他认证信息",
@@ -1564,10 +1571,10 @@
   "protection_replicate_specified_date_label": "复制指定日期的副本",
   "protection_replicate_specified_date_help_label": "仅支持复制指定日期的全量和永久增量（合成全量）副本。",
   "protection_copy_retention_label": "全量副本复制并保留",
-  "protection_overwrite_openstack_project_sla_label": "覆盖云主机已有的SLA",
-  "protection_not_overwrite_openstack_project_sla_label": "不覆盖云主机已有的SLA",
-  "protection_apply_sla_in_openstack_project_label": "将项目SLA应用到所有未关联的云主机上",
-  "protection_apply_sla_in_new_openstack_project_label": "将项目SLA应用到新创建的云主机上",
+  "protection_overwrite_openstack_project_sla_label": "覆盖云主机已关联的SLA",
+  "protection_not_overwrite_openstack_project_sla_label": "不覆盖云主机已关联的SLA",
+  "protection_apply_sla_in_openstack_project_label": "将项目SLA应用到所有未关联的云服务器上",
+  "protection_apply_sla_in_new_openstack_project_label": "将项目SLA应用到新创建的云服务器上",
   "protection_custon_params_placeholder_label": "支持输入多个参数，用英文“,”隔开；如：IP地址=100.120.140,用户名=user_01。",
   "protection_canncel_huawei_stack_project_label": "项目/云服务器",
   "protection_cluster_host_vm_label": "集群/主机/虚拟机",
@@ -1598,6 +1605,8 @@
   "protection_goldendb_storage_file_label": "存储配置",
   "protection_goldendb_storage_file_tips_label": "在GoldenDB管理界面配置的集群实例级存储配置ini文件。",
   "protection_db_two_tablespace_retsore_tips_label": "提示：如果副本中存在被删除的表，无法使用表空间集的副本进行恢复，需要使用数据库副本进行恢复。",
+  "protection_db_two_retsore_connect_database_tips_label": "DB2数据库恢复过程中，请勿再次连接目标数据库，否则可能会导致恢复任务失败。",
+  "protection_db_two_retsore_connect_tablespace_tips_label": "DB2表空间集恢复过程中，请勿再次连接目标数据库，否则可能会导致恢复任务失败。",
   "protection_report_timerange_error_label": "结束日期不能晚于当前日期。",
   "protection_kingbase_update_mode_label": "更新运行模式",
   "protection_kingbase_update_mode_tips_label": "获取生产环境最新主备节点信息。",
@@ -1750,7 +1759,7 @@
   "protection_host_cpu_label": "CPU占用率",
   "protection_host_mem_label": "内存占用率",
   "protection_vmware_storage_label": "存储层备份",
-  "protection_vmware_storage_tips_label": "如果添加了OceanStor Dorado 6.1.3及后续版本或NetApp ONTAP 9.4及后续版本的存储资源，则支持对满足要求的虚拟机磁盘优先通过存储层备份模式进行备份。<br>与排除已删除文件数据功能或指定数据传输模式功能互斥。",
+  "protection_vmware_storage_tips_label": "如果添加了OceanStor Dorado 6.1.3及后续版本或NetApp ONTAP 9.6及NetApp ONTAP 9.8的存储资源，则支持对满足要求的虚拟机磁盘优先通过存储层备份模式进行备份。<br>与排除已删除文件数据功能或指定数据传输模式功能互斥。",
   "protection_restore_target_to_cluster_label": "恢复到目标集群",
   "protection_single_node_deployment_label": "单机部署",
   "protection_active_standby_deployment_label": "主备部署",
@@ -2088,7 +2097,7 @@
   "protection_delete_same_name_table_label": "删除重名表",
   "protection_delete_same_pdb_label": "删除重名PDB",
   "protection_after_restoration_open_pdb_label": "恢复后开启PDB",
-  "protection_pdb_restore_path_tips_label": "请确保目标主机已存在该路径，否则恢复任务将失败。",
+  "protection_pdb_restore_path_tips_label": "请确保目标主机已存在该路径，否则恢复任务将失败。对于集群部署场景，请填写ASM共享路径。",
   "protection_delete_same_name_table_tips_label": "当目标恢复位置存在重名表时，不选择删除重命名表将导致恢复失败，请谨慎选择。",
   "protection_delete_same_name_pdb_tips_label": "当目标恢复位置存在重名PDB时，需勾选该功能，否则将导致恢复任务失败。",
   "protection_available_memory_label": "内存资源",
@@ -2108,10 +2117,10 @@
   "protection_cloud_specified_path_help_label": "如果不输入目标路径，则按已选择文件的原路径恢复至目标云服务器。<br>目标云服务器为Windows OS时，如果云服务器中不存在目标路径中相应的盘符，则恢复失败。",
   "protection_cnware_new_disk_name_help_label": "新建磁盘时，如果磁盘名称重复，新磁盘名称会设定为“指定磁盘名称_时间戳”。",
   "protection_vbs_node_info_label": "VBS节点登录信息",
-  "protection_vbs_node_user_name_label": "节点用户名",
-  "protection_vbs_node_ip_label": "节点IP",
-  "protection_vbs_node_port_label": "节点端口",
-  "protection_vbs_node_password_label": "节点密码",
+  "protection_vbs_node_user_name_label": "用户名",
+  "protection_vbs_node_ip_label": "IP地址",
+  "protection_vbs_node_port_label": "端口",
+  "protection_vbs_node_password_label": "密码",
   "protection_vbs_node_info_tip_label": "当需要使用内置客户端对华为分布式块存储（8.1.3及以上版本）的卷进行增量备份时，请打开开关。",
   "protection_fileset_user_tips_label": "1. 长度范围是3到20位。<br>2. 名称不能包含\"/\\[]:|<>+=;?*@,空格以及控制字符，且尾字符不能为“.”。",
   "protection_fileset_user_valid_label": "名称不能包含\"/\\[]:|<>+=;?*@,空格以及控制字符，且尾字符不能为“.”。",
@@ -2294,8 +2303,8 @@
   "protection_sqlser_instance_label": "SQL Server实例",
   "protection_install_vmware_tools_label": "检查并安装VMware Tools",
   "protection_install_vmware_tools_desc_label": "执行应用一致性备份或文件级恢复时，需要在受保护虚拟机或目标虚拟机安装VMware Tools。",
-  "protection_mount_file_exploration_label": "创建挂载",
-  "protection_file_exploration_unmount_tips_label": "当前副本还未进行文件级浏览挂载任务，请点击创建挂载，等待副本文件级挂载状态变为已挂载后重试。",
+  "protection_mount_file_exploration_label": "创建挂载点",
+  "protection_file_exploration_unmount_tips_label": "当前副本还未进行文件级挂载任务，请单击“创建挂载点”，等待副本的“文件级挂载状态”变为“已挂载”后重试。",
   "protection_check_vapi_endpoint_label": "检查并开启vmware-vapi-endpoint服务",
   "protection_check_vapi_endpoint_desc_label": "注册VMware虚拟化环境前，请确保vCenter Server上vmware-vapi-endpoint服务已开启，否则注册将失败。",
   "protection_config_script_label": "配置应用一致性备份脚本",
@@ -2481,7 +2490,7 @@
   "protection_business_ips_label": "备份网络IP地址（地址段）",
   "protection_business_ip_tip_label": "填写后则使用该IP地址进行注册。如果不填写，则会检测业务端口IP连通性，并自动选择网络连通的IP地址进行注册。",
   "protection_add_backup_record_label": "添加备份记录",
-  "protection_add_backup_record_tip_label": "开启后，备份完成时会在vcenter虚拟机自定义属性中添加本次备份的结果与时间，当生产资源为ESXI时不生效。",
+  "protection_add_backup_record_tip_label": "开启后，在备份vCenter Server上的虚拟机完成后，系统会在vCenter Server上对应虚拟机的“自定义属性”页面添加本次备份的信息。如果注册的是ESXi主机，该开关不生效。",
   "protection_source_deduplication_tip_label": "如果后续会为该客户端配置LAN-Free，请开启此功能。",
   "protection_fqdn_valid_tip_label": "域名中的各个标签之间以“.”分隔。各标签长度不能超过63个字符，可包含字母、数字、“-”及“_”，不支持以“-”或“_”开头或结尾。",
   "protection_openstack_disk_tip_label": "共享盘或克隆卷不会展示且不能备份。",
@@ -2504,5 +2513,19 @@
   "protection_rule_name_include_label": "虚拟机名称包含“{0}”",
   "protection_rule_name_exclude_label": "虚拟机名称排除“{0}”",
   "protection_rule_name_include_exclude_label": "虚拟机名称包含“{0}”并排除“{1}”",
-  "protection_fusion_recovery_tip_label": "以下虚拟机配置项不会恢复，恢复成功后可前往{0}进行手动设置。<ul><li>内存-大页配置。</li><li>CPU-绑定信息。</li><li>虚拟机启动方式-精确指定设备启动顺序。</li><li>PCI设备信息。</li><li>GPU资源组信息。</li><li>NUMA结构调整。</li><li>CPU/内存热添加。</li></ul>"
+  "protection_fusion_recovery_tip_label": "以下虚拟机配置项不会恢复，恢复成功后可前往{0}进行手动设置。<ul><li>内存-大页配置。</li><li>CPU-绑定信息。</li><li>虚拟机启动方式-精确指定设备启动顺序。</li><li>PCI设备信息。</li><li>GPU资源组信息。</li><li>NUMA结构调整。</li><li>CPU/内存热添加。</li></ul>",
+  "protection_script_timeout_label": "数据库一致性脚本执行超时时间",
+  "protection_cluster_sla_help_label": "资源扫描后，系统将自动为新加入集群且未关联SLA的虚拟机关联与该集群相同的SLA。",
+  "protection_host_sla_help_label": "资源扫描后，系统将自动为新加入主机且未关联SLA的虚拟机关联与该主机相同的SLA。",
+  "protection_openstack_sla_help_label": "资源扫描后，系统将自动为新加入项目且未关联SLA的云服务器关联与该项目相同的SLA。",
+  "protection_hcs_sla_help_label": "资源扫描后，系统将自动为新加入项目/资源集且未关联SLA的云服务器关联与该项目/资源集相同的SLA。",
+  "protection_aps_sla_help_label": "资源扫描后，系统将自动为新加入可用区且未关联SLA的云服务器关联与该可用区相同的SLA。",
+  "protection_overwrite_policy_cluster_help_label": "资源扫描后，系统是否自动覆盖新加入集群且已关联SLA虚拟机的SLA。",
+  "protection_overwrite_policy_host_help_label": "资源扫描后，系统是否自动覆盖新加入主机且已关联SLA虚拟机的SLA。",
+  "protection_overwrite_policy_openstack_help_label": "资源扫描后，系统是否自动覆盖新加入项目且已关联SLA云服务器的SLA。",
+  "protection_overwrite_policy_hcs_help_label": "资源扫描后，系统是否自动覆盖新加入项目/资源集且已关联SLA云服务器的SLA。",
+  "protection_overwrite_policy_aps_help_label": "资源扫描后，系统是否自动覆盖新加入可用区且已关联SLA云服务器的SLA。",
+  "protection_overwrite_policy_group_help_label": "为虚拟机组创建或修改保护时是否自动覆盖该虚拟机组中已关联SLA的虚拟机的SLA。",
+  "protection_file_tree_e1000_tip_label": "如果所选目录中的文件数量超过1万条，系统可能超时，无法选择该目录中待恢复的文件或文件夹，建议手动输入路径。",
+  "protection_file_tree_tip_label": "如果所选目录中的文件数量超过100万条，系统可能超时，无法选择该目录中待恢复的文件或文件夹，建议手动输入路径。"
 }
