--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/zh-cn/system.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/zh-cn/system.json
@@ -12,6 +12,7 @@
   "system_backup_cluster_member_node_label": "成员节点",
   "system_backup_cluster_member_node_low_label": "成员节点",
   "system_backup_cluster_member_node_lowcase_label": "成员节点",
+  "system_backup_member_node_tip_label": "OceanProtect X3000备份一体机与OceanProtect X6000/X8000/X9000/X8000K/X9000K备份一体机不能互为成员节点。<br>OceanProtect X9000/X9000K备份一体机与OceanProtect X6000/X8000/X8000K备份一体机不能互为成员节点。",
   "system_network_set_label": "网络设置",
   "system_netplane_name_label": "网络平面名称",
   "system_internal_communication_network_plane_label": "内部通信网络",
@@ -481,6 +482,7 @@
   "system_device_time_label": "设备时间",
   "system_device_time_desc_label": "如果需要修改设备时间，请<span class='aui-link' id='open-device'>打开设备管理</span>，选择“设置 > 基本信息 > 设备时间”，进入设备时间界面进行操作。",
   "system_cluster_device_time_desc_label": "如果需要修改设备时间，请打开设备管理，选择“设置 > 基本信息 > 设备时间”，进入设备时间界面进行操作。",
+  "system_cluster_device_time_distributed_desc_label": "如果需要修改设备时间，请打开设备管理，选择“设置 > 时间配置”，进入时间配置界面进行操作。",
   "system_device_time_desc_cyber_label": "如果需要设置NTP时间同步，请登录iBMC管理界面，选择“iBMC管理>时区&NTP”，进入时区&NTP界面进行操作。",
   "system_sftp_label": "SFTP服务",
   "system_setting_trap_info_label": "认证信息已设置成功，请跳转至<span class='aui-link' id='open-host'>保护 > 客户端</span>页面选择Oracle主机手动同步Trap信息。",
