--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/zh-cn/task/common.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/zh-cn/task/common.json
@@ -1055,6 +1055,13 @@
   "plugin_not_enable_acl_backup_label": "备份ACL开关未开启。",
   "plugin_copy_not_contain_acl_label": "副本不包含ACL信息。",
   "K8s_plugin_task_backup_fail_label": "Kubernetes CSI备份任务失败。",
+  "k8s_pre_consistent_script_exec_timeout_label": "{0}应用一致性备份的前置脚本执行超时，超时时间为{1}秒。",
+  "k8s_post_consistent_script_exec_timeout_label": "{0}应用一致性备份的后置脚本执行超时，超时时间为{1}秒,请用户执行后置脚本解锁数据库。",
+  "k8s_pre_consistent_script_exec_fail_label": "{0}应用一致性备份的前置脚本执行失败。",
+  "k8s_post_consistent_script_exec_fail_label": "{0}应用一致性备份的后置脚本执行失败，请用户执行后置脚本解锁数据库。",
+  "k8s_pre_consistent_script_exec_success_label": "{0}应用一致性备份的前置脚本执行成功。",
+  "k8s_post_consistent_script_exec_success_label": "{0}应用一致性备份的后置脚本执行成功。",
+  "k8s_pvc_create_snapshot_success_label": "在时间点：{0}对PVC：{1}打快照。",
   "agent_tidb_failed_fetch_databases_on_target_cluster_label": "获取目标集群数据库失败。",
   "job_log_restore_check_cluster_exist_fail_label": "目标集群（{0}）不存在，恢复失败。",
   "job_log_restore_check_cluster_role_fail_label": "目标集群（{0}）为备模式，恢复失败。",
