--- a/doc/quick_guide/快速入门.md
+++ b/doc/quick_guide/快速入门.md
@@ -1253,12 +1253,14 @@ Traefik的安装请参考Traefik官方文档安装，配置参数请关注如下
 
     ```
     mkdir open-eBackup_DataManager_image
-    tar -zxvf open-eBackup_DataManagerServer_image.tgz -C open-eBackup_Manager_image
+    tar -zxvf open-eBackup_1.6.RC2_DataManager_debug.tgz
+    tar -zxvf open-eBackup_1.6.RC2_DataManager_debug.tgz -C open-eBackup_DataManager_image/
     docker load -i open-eBackup_DataManager_image/open-eBackup_1.0_DataManager.tar.xz
     
     mkdir open-eBackup_DataManager_chart
     tar -zxvf open-eBackup_DataManager_chart.tgz -C open-eBackup_DataManager_chart
-    helm install data-manager open-eBackup_DataManager_chart --set global.gaussdbpwd=R2F1c3NkYl8xMjM= --set global.replicas=1 --set global.deploy_type=d10 -n dpa
+    tar -zxvf open-eBackup_DataManager_chart/databackup-1.6.0-RC2.tgz -C open-eBackup_DataManager_chart
+    helm install data-manager open-eBackup_DataManager_chart/databackup --set global.gaussdbpwd=R2F1c3NkYl8xMjM= --set global.replicas=1 --set global.deploy_type=d10 -n dpa
     ```
 
 2.  查看安装结果
